--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -31,8 +31,15 @@ border-radius: 20px;
 width: 60px;;
 height:30px ;
 display: inline-block;
-margin-left:200px;
+margin-left:180px;
 color: black;
 
+}
+.displayinfo .imguser
+{
+    width:100px;
+    height: 100px;
+    margin-left: -150px;
+    border-radius: 20%;
 }
 
